--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <br>
             <button type="button" onclick="myFunction()">Cek</button>
         <p>Info Hash</p>
-        <input style="width: 500px;" type="text" name="Hash"><br>
+        <input style="width: 500px;" readonly type="text" name="Hash"><br>
         <p>Nama File</p>
-        <input style="width: 500px;" type="text" name="File"><br>
+        <input style="width: 500px;" readonly type="text" name="File"><br>
         
     </form>
 
